# asdf

./: .gitignore
laced/backend/: .pre-commit-config.yaml  pyproject.toml  requirements.txt  requirements2.txt  requirements3.txt
laced/backend/server/: entrypoint444.sh  manage.py  package-lock.json  package.json  product.json  setup.cfg  tailwind.config.js  tsconfig.json  webpack.config.js
laced/backend/server/app/management/: apps.py  forms.py  urls.py  views.py
laced/backend/server/app/product/: admin.py  apps.py  middleware.py  models.py  permissions.py  serializers.py  session_views.py  signals.py  translation.py  urls.py  val.py  validators.py  views.py
laced/backend/server/app/product/fixtures/: category.json  category_all.json  image.json  image_example.json  m.py  variation.json  variation_option.json
laced/backend/server/app/product/fixtures asdfsaf/: category.json  categoryывфа.json  country.json  product2323.json  variation.json  variation_option.json
laced/backend/server/app/purchases/: admin.py  apps.py  models.py  serializers.py  service.py  service2.py  service_new.py  urls.py  views.py  views_copy.py  views_new.py
laced/backend/server/app/user/: admin.py  apps.py  middleware.py  models.py  serializers.py  signals.py  urls.py  views.py
laced/backend/server/assets/scripts/: index.js
laced/backend/server/req_parse/: main.py  proxy.py  proxy_list.json  scrapper.py
laced/backend/server/req_parse/links/: adidas.json  air_jordan.json  all_product_links.json  asics.json  converse.json  crocs.json  new_balance.json  nike.json  on_running.json  ugg.json  yeezy.json
laced/backend/server/server/: asgi.py  settings.py  setup.cfdg  urls.py  wsgi.py
laced/backend/server/server/settings/: base.py
laced/backend/server/static/: bundle.js  bundle.js.LICENSE.txt
laced/backend/server/static/css/: tw.css
(+142 files in other folders)
