[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["daron035 <kamil249@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
django-cors-headers = "^4.3.1"
django-extensions = "^3.2.3"
django-stubs = "^4.2.6"
djangorestframework = "^3.14.0"
djoser = "^2.2.2"
drf-spectacular = "^0.26.5"
gunicorn = "^21.2.0"
pillow = "^10.1.0"
psycopg2 = "^2.9.9"
requests = "^2.31.0"
requests-mock = "^1.11.0"
selenium = "^4.15.2"
selenium-wire = "^5.1.0"
uvicorn = "^0.24.0.post1"
webdriver-manager = "^4.0.1"
django = "^4.2.7"
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
pandas = "^2.2.0"
mypy = "^1.10.0"
ipinfo-django = "^2.0.0"
yookassa = "^3.1.0"
django-debug-toolbar = "^4.4.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
pre-commit = "^3.6.0"
faker = "^22.6.0"
pytest = "^8.0.0"
pytest-django = "^4.8.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "server.server.settings.development"


[tool.isort]
multi_line_output=3
include_trailing_comma=true
line_length=120
lines_after_imports=2
lines_between_sections=1
lines_between_types=0
force_alphabetical_sort_within_sections=true
ensure_newline_before_comments=true
combine_as_imports=true
combine_star=true
skip_gitignore=true
balanced_wrapping=true
force_grid_wrap=2
src_paths=["server", ]
skip_glob=[
    ".git",
    ".idea",
    ".vscode",
    "venv",
    ".venv",
    "__pycache__",
]
known_django=["django", "ninja", "rest_framework"]
known_first_party=["app"]
sections=[
    "FUTURE",
    "STDLIB",
    "DJANGO",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
